formver.compiler-plugin/testData/diagnostics/conversion/nameing/havoc_method_ref_typed_consistency_error.kt
class B()

class A(var ref: B)

fun <!VIPER_TEXT!>`havoc$B`<!>() {}

fun <!VIPER_TEXT!>havocMethodRefTypedConsistencyError<!>(a: A) {
    val local = a.ref
    `havoc$B`()
    local
}
